crates/backyard-lexer/tests/snapshots/comment__doc_param_type_27.snap
---
source: crates/backyard-lexer/tests/comment.rs
expression: tokens
snapshot_kind: text
---
- token_type: CommentDocOpen
  value:
    - 47
    - 42
    - 42
  line: 1
  column: 0
  offset: 0
- token_type: DocTagParam
  value:
    - 64
    - 112
    - 97
    - 114
    - 97
    - 109
  line: 1
  column: 4
  offset: 4
- token_type: LeftParenthesis
  value:
    - 40
  line: 1
  column: 11
  offset: 11
- token_type: LeftParenthesis
  value:
    - 40
  line: 1
  column: 12
  offset: 12
- token_type: LeftParenthesis
  value:
    - 40
  line: 1
  column: 13
  offset: 13
- token_type: Type
  value:
    - 115
    - 116
    - 114
    - 105
    - 110
    - 103
  line: 1
  column: 14
  offset: 14
- token_type: BitwiseOr
  value:
    - 124
  line: 1
  column: 21
  offset: 21
- token_type: Type
  value:
    - 105
    - 110
    - 116
  line: 1
  column: 23
  offset: 23
- token_type: BitwiseOr
  value:
    - 124
  line: 1
  column: 27
  offset: 27
- token_type: Type
  value:
    - 102
    - 108
    - 111
    - 97
    - 116
  line: 1
  column: 29
  offset: 29
- token_type: RightParenthesis
  value:
    - 41
  line: 1
  column: 34
  offset: 34
- token_type: LeftSquareBracket
  value:
    - 91
  line: 1
  column: 35
  offset: 35
- token_type: RightSquareBracket
  value:
    - 93
  line: 1
  column: 36
  offset: 36
- token_type: RightParenthesis
  value:
    - 41
  line: 1
  column: 37
  offset: 37
- token_type: LeftSquareBracket
  value:
    - 91
  line: 1
  column: 38
  offset: 38
- token_type: RightSquareBracket
  value:
    - 93
  line: 1
  column: 39
  offset: 39
- token_type: RightParenthesis
  value:
    - 41
  line: 1
  column: 40
  offset: 40
- token_type: LeftSquareBracket
  value:
    - 91
  line: 1
  column: 41
  offset: 41
- token_type: RightSquareBracket
  value:
    - 93
  line: 1
  column: 42
  offset: 42
- token_type: Variable
  value:
    - 36
    - 102
    - 111
    - 111
  line: 1
  column: 44
  offset: 44
- token_type: CommentDocClose
  value:
    - 42
    - 47
  line: 1
  column: 49
  offset: 49
